# voltron

./: .gitignore  Dockerfile  README.md  automata.dot  clean_out.sh  cli.py  configs.yaml  count_tool.py  main.py  plot_states.py  pyproject.toml  replayer.py  run_in_docker.sh  section_tree.pkl  test.py  test.txt  tree.txt
config/: configs.yaml
config/rfcs/: rfc3261.txt  rfc3262.txt
configs/: configs.yaml
configs/FTP/: post.sh  run.sh  run.txt
configs/bftpd/: post.sh  run.txt
configs/exim/: cov_run.txt  run.sh
configs/forked-daapd/: post.sh  run.sh  run.txt
configs/ftp/: run.sh
configs/libcoap/: libcoap.md  run.txt
configs/live555/: cov_collect.sh
configs/minimail-smtp/: minimail-smtp.md
input/rfcs/: rfc3311  (+8 more)
ir/: res_ir.xml  section_tree.pkl
out-lightftp-voltron-0112_18_55_09/: fuzzer_stats
out-lightftp-voltron-0112_19_01_44/: fuzzer_stats
out-lightftp-voltron-0113_14_28_49/: fuzzer_stats
out-lightftp-voltron-0113_20_35_30/: fuzzer_stats
out-lightftp-voltron-0113_20_40_05/: fuzzer_stats
prompts/: doc_analyze.md  gen_input.md  generator_generation.md  infer_dependency.md  initial_symbols.md  input_generation.md  input_repair.md  ir_generation.md  msg_type.md  mutator_evolve.md  mutator_havoc.md  parser_generation.md  possible_response.md  request_query.md  response_query.md  rfc_query.md  rfc_summary.md  z_msg_type.md
results-lightftp-voltron-0118_13_31_49/: fuzzer_status  states_info
results-lightftp-voltron-0118_23_42_46/: fuzzer_status
results-lightftp-voltron-0119_12_55_39/: fuzzer_status
tests/: Dockerfile  test_llm.py  test_st.py  test_workflow.py
voltron/: configs.py  fuzz.py  main.py
(+333 files in other folders)
